--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -19,6 +19,13 @@
   </div>
 
   <div>
+    <label for="email">
+      E-mail
+    </label>
+    <input id="email" type="email" formControlName="email">
+  </div>  
+
+  <div>
     <label for="address">
       Address
     </label>
